--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ services:
 install: true
 
 script:
-  - docker run -d --name pg -p 5432:5432 postgres:9.6
+  - docker run -d --name pg -p 5433:5432 postgres:9.6
   - docker exec pg psql -c 'create database locktest;' -U postgres
-  - go test -v ./...
+  - go test -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5433/postgres?sslmode=disable
