--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ go:
 services:
   - docker
 
+before_install:
+  - go get github.com/mattn/goveralls
+
 install: true
 
 script:
   - docker run -d --name pg -p 5433:5432 postgres:9.6
-  - go test -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5433/postgres?sslmode=disable
+  - go test -covermode=count -coverprofile=profile.cov -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5433/postgres?sslmode=disable
+  - $GOPATH/bin/goveralls -coverprofile=profile.cov -service=travis-ci
