--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ before_install:
 install: true
 
 script:
+  - docker run -d --name pg95 -p 5496:5432 postgres:9.5
   - docker run -d --name pg96 -p 5496:5432 postgres:9.6
   - docker run -d --name pg10 -p 5410:5432 postgres:10
   - docker run -d --name pg11 -p 5411:5432 postgres:11
+  - go test -covermode=count                           -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5495/postgres?sslmode=disable
   - go test -covermode=count                           -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5496/postgres?sslmode=disable
   - go test -covermode=count                           -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5410/postgres?sslmode=disable
   - go test -covermode=count -coverprofile=profile.cov -v ./... -dsn=postgres://postgres:mysecretpassword@localhost:5411/postgres?sslmode=disable
