--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20.2'
+        go-version: 'stable'
         env: GOPROXY=https://proxy.golang.org
 
     - name: Test
