enable golangci-lint
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,6 +34,12 @@ jobs:
       with:
         go-version: 'stable'
 
+    - name: Setup golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        # actions/setup-go@v4 introduced automatic cache handling so skip cache here
+        skip-cache: true
+
     - name: Test
       run: |
         go test -coverprofile=coverage.out -shuffle on -short -v -dsn="postgres://postgres:everyone@localhost:5432/postgres?sslmode=disable" || (sleep 5; go test -coverprofile=coverage.out -shuffle on -short -v -dsn="postgres://postgres:everyone@localhost:5432/postgres?sslmode=disable")
