lint: enable misspell linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,10 +2,11 @@ linters:
   disable:
     - depguard
   enable:
-    - unused
     - errcheck
-    - ineffassign
-    - staticcheck
-    - govet
     - godot
+    - govet
+    - ineffassign
+    - misspell
+    - staticcheck
     - unparam
+    - unused
