pglock: enforce version control to linter

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,8 +36,7 @@ jobs:
 
     - name: Test
       run: |
-        go test -coverprofile=coverage.out -shuffle on -short -v -dsn="postgres://postgres:everyone@localhost:5432/postgres?sslmode=disable" || (sleep 5; go test -coverprofile=coverage.out -shuffle on -short -v -dsn="postgres://postgres:everyone@localhost:5432/postgres?sslmode=disable")
-        go tool cover -html=coverage.out -o coverage.html
+        make test
 
     - name: Upload coverage
       uses: actions/upload-artifact@v3
