pglock: upgrade GitHub workflows

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,15 +28,15 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Setup Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
 
     - name: golangci-lint cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/go/bin/golangci-lint
         key: ${{ runner.os }}-golangci-lint-v1.54.2
@@ -46,7 +46,7 @@ jobs:
         make linters test
 
     - name: Upload coverage
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: coverage
+        name: coverage_${{ matrix.go-version }}_${{ matrix.postgres-version }}
         path: coverage.html
