--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        postgres-version: ['latest', 16, 15, 14, 13, 12]
+        postgres-version: ['latest', 16, 15, 14, 13]
         go-version: ['stable','oldstable']
     runs-on: ubuntu-latest
 
