--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,14 +5,12 @@ on:
     branches: [ main ]
   pull_request:
   merge_group:
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   build:
     strategy:
       matrix:
-        postgres-version: ['latest', 16, 15, 14, 13, 12]
+        postgres-version: ['latest', 16, 15, 14, 13]
         go-version: ['stable','oldstable']
     runs-on: ubuntu-latest
 
